--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="infoSzoveg">12</p>
             </div>
             <footer>
-                <p>Tesztelte: Saját név</p>
+                <p>Tesztelte: Illés Lejla</p>
             </footer>
         </main>
     </body>
